# experiments-cmake

./: CMakeLists.txt  README.md  project.code-workspace  todo.txt  toolchain.cmake
experiments/cmake_variables/: CMakeLists.txt  README.md  toolchain.cmake
experiments/external_variables/: CMakeLists.txt  README.md  toolchain.cmake
experiments/installing_targets/: CMakeLists.txt
experiments/project_directive/: CMakeLists.txt  README.md  toolchain.cmake
experiments/public_header/: CMakeLists.txt
experiments/target_properties/: CMakeLists.txt  README.md
experiments/target_properties/dummy/: CMakeLists.txt
experiments/target_properties/include/: producer.h
experiments/target_properties/src/: consumer.cpp
lib/: CMakeLists.txt
lib/sample_consumer/: CMakeLists.txt
lib/sample_consumer/src/: main.cpp
lib/sample_producer/: CMakeLists.txt
lib/sample_producer/include/: product.hpp
lib/sample_producer/src/: product.cpp
